tests/base/parser/bad/exps/exp_t-tfun-tid-with.scilexp
tfun 'A -> Nil {'A} (* should be '=>' *)
